--- a/package.json
+++ b/package.json
@@ -6,22 +6,30 @@
   "scripts": {
     "start": "nodemon src/server.ts",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "test": "set ENV=test&&tsc&&db-migrate --env test up&&tsc&&jasmine-ts&&db-migrate reset",
+    "test": "set ENV=test&&db-migrate --env test up&&tsc&&jasmine&&db-migrate --env test reset",
     "tsc": "tsc"
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.1",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
+    "prettier": "^2.6.2",
     "supertest": "^6.2.3",
     "typescript": "^4.1.3"
   },
